# klaptik-fx

./: Cargo.toml  memory.x  readme.md
.cargo/: config.toml
pcb/: fp-lib-table  klaptik-fx.ioc  klaptik-fx.kicad_pcb  klaptik-fx.kicad_prl  klaptik-fx.kicad_pro  klaptik-fx.kicad_sch  sym-lib-table
pcb/Footprints.pretty/: SolderConnector.kicad_mod
pcb/bom/: ibom.html
src/: app.rs  config.rs  controls.rs  display.rs  main.rs  pins.rs  power.rs  server.rs  store.rs  ui.rs  wiring.rs
src/app/: mod.rs  ui.rs  widgets.rs
src/app/assets/: mod.rs
